# test-grpc

./: MANIFEST.in  pyproject.toml  setup.cfg
my_test/: test.py
proto/: test.proto
test/: test.py
