# file: pyproject.toml
[build-system]
requires = ["setuptools", "./setuptools_grpc-1.0.0b2-py3-none-any.whl"] # "setuptools-grpc==1.0.0b2"
build-backend = "setuptools.build_meta"

[project]
name = "my-test"
version = "0.0.1"
dependencies = [
    "grpcio"
]

[tool.setuptools]
packages = ["test", "proto"]
