# file: pyproject.toml
[build-system]
requires = ["setuptools", "setuptools_grpc==1.0.0b2"]
build-backend = "setuptools.build_meta"

[project]
name = "my-test"
version = "0.0.1"
dependencies = [
    "grpcio"
]

[tool.setuptools]
packages = ["my_test", "proto"]

[project.scripts]
my_test = "my_test.test:__main__"
